namespace AppForMovies.API.Models
{
    public class Rental
    {
        public Rental()
        {
        }
        public Rental(string customerUserName, string customerNameSurname, ApplicationUser applicationUser, string deliveryAddress, DateTime rentalDate, PaymentMethodTypes paymentMethod, DateTime rentalDateFrom, DateTime rentalDateTo, IList<RentalItem> rentalItems)
        {
            TotalPrice = rentalItems.Sum(ri => ri.PriceForRenting * (rentalDateTo - rentalDateFrom).Days);

            //autogenerated
            RentalDateFrom = rentalDateFrom;
            RentalDateTo = rentalDateTo;
            RentalDate = rentalDate;
            DeliveryAddress = deliveryAddress;
            CustomerUserName = customerUserName;
            CustomerNameSurname = customerNameSurname;
            ApplicationUser = applicationUser;
            RentalItems = rentalItems;
            PaymentMethod = paymentMethod;
        }

        public int Id { get; set; }

        public double TotalPrice { get; set; }

        public DateTime RentalDate { get; set; }

        public DateTime RentalDateFrom { get; set; }
        public DateTime RentalDateTo { get; set; }


        [DataType(System.ComponentModel.DataAnnotations.DataType.MultilineText)]
        [Display(Name = "Delivery Address")]
        [Required(AllowEmptyStrings = false, ErrorMessage = "Please, set your address for delivery")]
        public string DeliveryAddress { get; set; }

        public string CustomerUserName { get; set; }

        public string CustomerNameSurname { get; set; }
        [Display(Name = "Payment Method")]
        public PaymentMethodTypes PaymentMethod { get; set; }

        public IList<RentalItem> RentalItems { get; set; }

        public ApplicationUser ApplicationUser { get; set; }
    }

    public enum PaymentMethodTypes
    {
        CreditCard,
        PayPal,
        Cash
    }
}
